test/corpus/invalid_tree.txt
================================================================================
Invalid - expected function_invocation
================================================================================

RETURN namespace.function(1);

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (return
              (ERROR
                (property_or_labels_expression
                  (expression
                    (atom
                      (variable
                        (identifier))))
                  (property_lookup
                    (identifier))))
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (parenthesized_expression
                          (expression
                            (atom
                              (literal
                                (number_literal
                                  (integer_literal
                                    (decimal_integer)))))))))))))))))))
