test/corpus/legacy/grammar.txt
================================================================================
Grammar - hint - using index
================================================================================

// https://neo4j.com/docs/cypher-manual/4.4/query-tuning/using/
MATCH (p:Pioneer {born: 525})
USING INDEX p:Pioneer(born)
RETURN *

--------------------------------------------------------------------------------

(cypher
  (comment)
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (reading_clause
              (match
                (pattern
                  (pattern_part
                    (anonymous_pattern_part
                      (pattern_element
                        (node_pattern
                          (variable
                            (symbolic_name
                              (unescaped_symbolic_name)))
                          (node_labels
                            (node_label
                              (label_name
                                (schema_name
                                  (symbolic_name
                                    (unescaped_symbolic_name))))))
                          (properties
                            (map_literal
                              (property_key_name
                                (schema_name
                                  (symbolic_name
                                    (unescaped_symbolic_name))))
                              (expression
                                (atom
                                  (literal
                                    (number_literal
                                      (integer_literal
                                        (decimal_integer)))))))))))))
                (hint
                  (variable
                    (symbolic_name
                      (unescaped_symbolic_name)))
                  (node_label
                    (label_name
                      (schema_name
                        (symbolic_name
                          (unescaped_symbolic_name)))))
                  (property_key_name
                    (schema_name
                      (symbolic_name
                        (unescaped_symbolic_name)))))))
            (return
              (projection_body
                (projection_items)))))))))

================================================================================
Grammar - hint - using join
================================================================================

// https://neo4j.com/docs/cypher-manual/4.4/query-tuning/using/
MATCH
  (s:Scientist {born: 1850})-[:RESEARCHED]->
  (sc:Science)<-[i:INVENTED_BY {year: 560}]-
  (p:Pioneer {born: 525})-[:LIVES_IN]->
  (c:City)-[:PART_OF]->
  (cc:Country {formed: 411})
USING INDEX s:Scientist(born)
USING INDEX cc:Country(formed)
USING JOIN ON p
RETURN *

--------------------------------------------------------------------------------

(cypher
  (comment)
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (reading_clause
              (match
                (pattern
                  (pattern_part
                    (anonymous_pattern_part
                      (pattern_element
                        (node_pattern
                          (variable
                            (symbolic_name
                              (unescaped_symbolic_name)))
                          (node_labels
                            (node_label
                              (label_name
                                (schema_name
                                  (symbolic_name
                                    (unescaped_symbolic_name))))))
                          (properties
                            (map_literal
                              (property_key_name
                                (schema_name
                                  (symbolic_name
                                    (unescaped_symbolic_name))))
                              (expression
                                (atom
                                  (literal
                                    (number_literal
                                      (integer_literal
                                        (decimal_integer)))))))))
                        (pattern_element_chain
                          (relationship_pattern
                            (dash)
                            (relationship_detail
                              (relationship_types
                                (rel_type_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))
                            (dash)
                            (right_arrow_head))
                          (node_pattern
                            (variable
                              (symbolic_name
                                (unescaped_symbolic_name)))
                            (node_labels
                              (node_label
                                (label_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))))
                        (pattern_element_chain
                          (relationship_pattern
                            (left_arrow_head)
                            (dash)
                            (relationship_detail
                              (variable
                                (symbolic_name
                                  (unescaped_symbolic_name)))
                              (relationship_types
                                (rel_type_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name)))))
                              (properties
                                (map_literal
                                  (property_key_name
                                    (schema_name
                                      (symbolic_name
                                        (unescaped_symbolic_name))))
                                  (expression
                                    (atom
                                      (literal
                                        (number_literal
                                          (integer_literal
                                            (decimal_integer)))))))))
                            (dash))
                          (node_pattern
                            (variable
                              (symbolic_name
                                (unescaped_symbolic_name)))
                            (node_labels
                              (node_label
                                (label_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))
                            (properties
                              (map_literal
                                (property_key_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))
                                (expression
                                  (atom
                                    (literal
                                      (number_literal
                                        (integer_literal
                                          (decimal_integer))))))))))
                        (pattern_element_chain
                          (relationship_pattern
                            (dash)
                            (relationship_detail
                              (relationship_types
                                (rel_type_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))
                            (dash)
                            (right_arrow_head))
                          (node_pattern
                            (variable
                              (symbolic_name
                                (unescaped_symbolic_name)))
                            (node_labels
                              (node_label
                                (label_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))))
                        (pattern_element_chain
                          (relationship_pattern
                            (dash)
                            (relationship_detail
                              (relationship_types
                                (rel_type_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))
                            (dash)
                            (right_arrow_head))
                          (node_pattern
                            (variable
                              (symbolic_name
                                (unescaped_symbolic_name)))
                            (node_labels
                              (node_label
                                (label_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))
                            (properties
                              (map_literal
                                (property_key_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))
                                (expression
                                  (atom
                                    (literal
                                      (number_literal
                                        (integer_literal
                                          (decimal_integer))))))))))))))
                (hint
                  (variable
                    (symbolic_name
                      (unescaped_symbolic_name)))
                  (node_label
                    (label_name
                      (schema_name
                        (symbolic_name
                          (unescaped_symbolic_name)))))
                  (property_key_name
                    (schema_name
                      (symbolic_name
                        (unescaped_symbolic_name)))))
                (hint
                  (variable
                    (symbolic_name
                      (unescaped_symbolic_name)))
                  (node_label
                    (label_name
                      (schema_name
                        (symbolic_name
                          (unescaped_symbolic_name)))))
                  (property_key_name
                    (schema_name
                      (symbolic_name
                        (unescaped_symbolic_name)))))
                (hint
                  (variable
                    (symbolic_name
                      (unescaped_symbolic_name))))))
            (return
              (projection_body
                (projection_items)))))))))

================================================================================
Grammar - hint - using scan
================================================================================

// https://neo4j.com/docs/cypher-manual/4.4/query-tuning/using/
MATCH
  (s:Scientist {born: 1850})-[:RESEARCHED]->
  (sc:Science)<-[i:INVENTED_BY {year: 560}]-
  (p:Pioneer {born: 525})-[:LIVES_IN]->
  (c:City)-[:PART_OF]->
  (cc:Country {formed: 411})
USING SCAN s:Scientist
RETURN *

--------------------------------------------------------------------------------

(cypher
  (comment)
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (reading_clause
              (match
                (pattern
                  (pattern_part
                    (anonymous_pattern_part
                      (pattern_element
                        (node_pattern
                          (variable
                            (symbolic_name
                              (unescaped_symbolic_name)))
                          (node_labels
                            (node_label
                              (label_name
                                (schema_name
                                  (symbolic_name
                                    (unescaped_symbolic_name))))))
                          (properties
                            (map_literal
                              (property_key_name
                                (schema_name
                                  (symbolic_name
                                    (unescaped_symbolic_name))))
                              (expression
                                (atom
                                  (literal
                                    (number_literal
                                      (integer_literal
                                        (decimal_integer)))))))))
                        (pattern_element_chain
                          (relationship_pattern
                            (dash)
                            (relationship_detail
                              (relationship_types
                                (rel_type_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))
                            (dash)
                            (right_arrow_head))
                          (node_pattern
                            (variable
                              (symbolic_name
                                (unescaped_symbolic_name)))
                            (node_labels
                              (node_label
                                (label_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))))
                        (pattern_element_chain
                          (relationship_pattern
                            (left_arrow_head)
                            (dash)
                            (relationship_detail
                              (variable
                                (symbolic_name
                                  (unescaped_symbolic_name)))
                              (relationship_types
                                (rel_type_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name)))))
                              (properties
                                (map_literal
                                  (property_key_name
                                    (schema_name
                                      (symbolic_name
                                        (unescaped_symbolic_name))))
                                  (expression
                                    (atom
                                      (literal
                                        (number_literal
                                          (integer_literal
                                            (decimal_integer)))))))))
                            (dash))
                          (node_pattern
                            (variable
                              (symbolic_name
                                (unescaped_symbolic_name)))
                            (node_labels
                              (node_label
                                (label_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))
                            (properties
                              (map_literal
                                (property_key_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))
                                (expression
                                  (atom
                                    (literal
                                      (number_literal
                                        (integer_literal
                                          (decimal_integer))))))))))
                        (pattern_element_chain
                          (relationship_pattern
                            (dash)
                            (relationship_detail
                              (relationship_types
                                (rel_type_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))
                            (dash)
                            (right_arrow_head))
                          (node_pattern
                            (variable
                              (symbolic_name
                                (unescaped_symbolic_name)))
                            (node_labels
                              (node_label
                                (label_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))))
                        (pattern_element_chain
                          (relationship_pattern
                            (dash)
                            (relationship_detail
                              (relationship_types
                                (rel_type_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))
                            (dash)
                            (right_arrow_head))
                          (node_pattern
                            (variable
                              (symbolic_name
                                (unescaped_symbolic_name)))
                            (node_labels
                              (node_label
                                (label_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))
                            (properties
                              (map_literal
                                (property_key_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))
                                (expression
                                  (atom
                                    (literal
                                      (number_literal
                                        (integer_literal
                                          (decimal_integer))))))))))))))
                (hint
                  (variable
                    (symbolic_name
                      (unescaped_symbolic_name)))
                  (node_label
                    (label_name
                      (schema_name
                        (symbolic_name
                          (unescaped_symbolic_name))))))))
            (return
              (projection_body
                (projection_items)))))))))
